crates/llama-cpp-sys/wrapper.h

/* ------------------------------------------------------------------------
 * `_c`-suffixed wrapper surface from wrapper.cpp.
 *
 * These are first-party C-callable functions that adapt the C++ llama.cpp
 * API (which moves/breaks across versions) to a stable C ABI consumed by
 * xybrid-llama. Bindgen processes these declarations alongside the
 * llama.cpp public symbols pulled in via <llama.h>.
 * ---------------------------------------------------------------------- */

/* Backend lifecycle */
void llama_backend_init_c(void);
void llama_backend_free_c(void);
/* Log verbosity control (xybrid-side filter sitting in front of
   llama.cpp's own ggml_log_callback). */
void llama_log_set_verbosity_c(int level);
int  llama_log_get_verbosity_c(void);
/* Model lifecycle */
XYBRID_LLAMA_MODEL* llama_load_model_from_file_c(const char* path_model, int n_gpu_layers);
void  llama_free_model_c(XYBRID_LLAMA_MODEL* model);
/* Context lifecycle */
XYBRID_LLAMA_CONTEXT* llama_new_context_with_model_c(
    XYBRID_LLAMA_MODEL* model,
    int n_ctx,
    int n_threads,
    int n_batch,
    bool flash_attn);
void  llama_free_c(XYBRID_LLAMA_CONTEXT* ctx);
void  llama_kv_cache_clear_c(XYBRID_LLAMA_CONTEXT* ctx);
int   llama_kv_cache_seq_rm_c(XYBRID_LLAMA_CONTEXT* ctx, int seq_id, int p_keep);
/* Tokenization */
int  llama_tokenize_c(
    const XYBRID_LLAMA_MODEL* model,
    const char* text,
    int text_len,
    int32_t* tokens,
    int n_tokens_max,
    bool add_special,
    bool parse_special);
int  llama_token_to_piece_c(
    const XYBRID_LLAMA_MODEL* model,
    int32_t token,
    char* buf,
    int length,
    int lstrip,
    bool special);
/* Special tokens / vocabulary */
int32_t llama_token_bos_c(const XYBRID_LLAMA_MODEL* model);
int32_t llama_token_eos_c(const XYBRID_LLAMA_MODEL* model);
int32_t llama_token_nl_c(const XYBRID_LLAMA_MODEL* model);
bool llama_vocab_is_eog_c(const XYBRID_LLAMA_MODEL* model, int32_t token);
/* Model metadata */
const char* llama_model_chat_template_c(const XYBRID_LLAMA_MODEL* model);
int  llama_n_vocab_c(const XYBRID_LLAMA_MODEL* model);
int  llama_n_ctx_c(const XYBRID_LLAMA_CONTEXT* ctx);
bool llama_model_is_recurrent_c(const XYBRID_LLAMA_MODEL* model);
bool llama_model_has_recurrent_state_c(const XYBRID_LLAMA_MODEL* model);
/* Low-level generation primitives (carried in wrapper.cpp's exports
   even though xybrid-llama drives generation via the higher-level
   `llama_generate*_c` entry points below). */
int   llama_decode_c(XYBRID_LLAMA_CONTEXT* ctx, const llama_batch* batch);
float* llama_get_logits_c(XYBRID_LLAMA_CONTEXT* ctx);
/* Chat template formatting */
int  llama_chat_apply_template_c(
    const char* tmpl,
    const llama_chat_message* chat,
    size_t n_msg,
    bool add_ass,
    char* buf,
    int length);
int  llama_format_chat_with_model_c(
    const XYBRID_LLAMA_MODEL* model,
    const char* XYBRID_CONST_PTR* roles,
    const char* XYBRID_CONST_PTR* contents,
    size_t n_msg,
    char* buf,
    int buf_size);
/* Batch and sampler helpers exported by wrapper.cpp for low-level callers. */
llama_batch llama_batch_init_c(int n_tokens, int embd, int n_seq_max);
void llama_batch_free_c(llama_batch batch);
XYBRID_LLAMA_SAMPLER* llama_sampler_chain_create_c(
    const XYBRID_LLAMA_MODEL* model,
    float temperature,
    float top_p,
    float min_p,
    int top_k,
    float repeat_penalty,
    int penalty_last_n,
    uint32_t seed,
    const char* grammar,
    const char* grammar_root);
void llama_sampler_free_c(XYBRID_LLAMA_SAMPLER* smpl);