crates/llama-cpp-sys/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_context_params {
    pub n_ctx: u32,
    pub n_batch: u32,
    pub n_ubatch: u32,
    pub n_seq_max: u32,
    pub n_threads: i32,
    pub n_threads_batch: i32,
    pub rope_scaling_type: llama_rope_scaling_type,
    pub pooling_type: llama_pooling_type,
    pub attention_type: llama_attention_type,
    pub flash_attn_type: llama_flash_attn_type,
    pub rope_freq_base: f32,
    pub rope_freq_scale: f32,
    pub yarn_ext_factor: f32,
    pub yarn_attn_factor: f32,
    pub yarn_beta_fast: f32,
    pub yarn_beta_slow: f32,
    pub yarn_orig_ctx: u32,
    pub defrag_thold: f32,
    pub cb_eval: ggml_backend_sched_eval_callback,
    pub cb_eval_user_data: *mut ::std::os::raw::c_void,
    pub type_k: ggml_type,
    pub type_v: ggml_type,
    pub abort_callback: ggml_abort_callback,
    pub abort_callback_data: *mut ::std::os::raw::c_void,
    pub embeddings: bool,
    pub offload_kqv: bool,
    pub no_perf: bool,
    pub op_offload: bool,
    pub swa_full: bool,
    pub kv_unified: bool,
    pub samplers: *mut llama_sampler_seq_config,
    pub n_samplers: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_model_tensor_override {
    pub pattern: *const ::std::os::raw::c_char,
    pub type_: ggml_type,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_model_imatrix_data {
    pub name: *const ::std::os::raw::c_char,
    pub data: *const f32,
    pub size: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_model_quantize_params {
    pub nthread: i32,
    pub ftype: llama_ftype,
    pub output_tensor_type: ggml_type,
    pub token_embedding_type: ggml_type,
    pub allow_requantize: bool,
    pub quantize_output_tensor: bool,
    pub only_copy: bool,
    pub pure_: bool,
    pub keep_split: bool,
    pub dry_run: bool,
    pub imatrix: *const llama_model_imatrix_data,
    pub kv_overrides: *const llama_model_kv_override,
    pub tt_overrides: *const llama_model_tensor_override,
    pub prune_layers: *const i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_logit_bias {
    pub token: llama_token,
    pub bias: f32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_sampler_chain_params {
    pub no_perf: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_chat_message {
    pub role: *const ::std::os::raw::c_char,
    pub content: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_adapter_lora {
    _unused: [u8; 0],
}
pub type llama_model_set_tensor_data_t = ::std::option::Option<
    unsafe extern "C" fn(tensor: *mut ggml_tensor, userdata: *mut ::std::os::raw::c_void),
>;
pub type llama_state_seq_flags = u32;
pub type llama_sampler_context_t = *mut ::std::os::raw::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_sampler_data {
    pub logits: *mut ggml_tensor,
    pub probs: *mut ggml_tensor,
    pub sampled: *mut ggml_tensor,
    pub candidates: *mut ggml_tensor,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_sampler_i {
    pub name: ::std::option::Option<
        unsafe extern "C" fn(smpl: *const llama_sampler) -> *const ::std::os::raw::c_char,
    >,
    pub accept:
        ::std::option::Option<unsafe extern "C" fn(smpl: *mut llama_sampler, token: llama_token)>,
    pub apply: ::std::option::Option<
        unsafe extern "C" fn(smpl: *mut llama_sampler, cur_p: *mut llama_token_data_array),
    >,
    pub reset: ::std::option::Option<unsafe extern "C" fn(smpl: *mut llama_sampler)>,
    pub clone: ::std::option::Option<
        unsafe extern "C" fn(smpl: *const llama_sampler) -> *mut llama_sampler,
    >,
    pub free: ::std::option::Option<unsafe extern "C" fn(smpl: *mut llama_sampler)>,
    pub backend_init: ::std::option::Option<
        unsafe extern "C" fn(smpl: *mut llama_sampler, buft: ggml_backend_buffer_type_t) -> bool,
    >,
    pub backend_accept: ::std::option::Option<
        unsafe extern "C" fn(
            smpl: *mut llama_sampler,
            ctx: *mut ggml_context,
            gf: *mut ggml_cgraph,
            selected_token: *mut ggml_tensor,
        ),
    >,
    pub backend_apply: ::std::option::Option<
        unsafe extern "C" fn(
            smpl: *mut llama_sampler,
            ctx: *mut ggml_context,
            gf: *mut ggml_cgraph,
            data: *mut llama_sampler_data,
        ),
    >,
    pub backend_set_input: ::std::option::Option<unsafe extern "C" fn(smpl: *mut llama_sampler)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_sampler {
    pub iface: *mut llama_sampler_i,
    pub ctx: llama_sampler_context_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_perf_context_data {
    pub t_start_ms: f64,
    pub t_load_ms: f64,
    pub t_p_eval_ms: f64,
    pub t_eval_ms: f64,
    pub n_p_eval: i32,
    pub n_eval: i32,
    pub n_reused: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_perf_sampler_data {
    pub t_sample_ms: f64,
    pub n_sample: i32,
}
pub type llama_opt_param_filter = ::std::option::Option<
    unsafe extern "C" fn(tensor: *const ggml_tensor, userdata: *mut ::std::os::raw::c_void) -> bool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_opt_params {
    pub n_ctx_train: u32,
    pub param_filter: llama_opt_param_filter,
    pub param_filter_ud: *mut ::std::os::raw::c_void,
    pub get_opt_pars: ggml_opt_get_optimizer_params,
    pub get_opt_pars_ud: *mut ::std::os::raw::c_void,
    pub optimizer_type: ggml_opt_optimizer_type,
}
pub const mtmd_input_chunk_type_MTMD_INPUT_CHUNK_TYPE_TEXT: mtmd_input_chunk_type = 0;
pub const mtmd_input_chunk_type_MTMD_INPUT_CHUNK_TYPE_IMAGE: mtmd_input_chunk_type = 1;
pub const mtmd_input_chunk_type_MTMD_INPUT_CHUNK_TYPE_AUDIO: mtmd_input_chunk_type = 2;
pub type mtmd_input_chunk_type = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_context {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_bitmap {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_image_tokens {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_input_chunk {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_input_chunks {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_input_text {
    pub text: *const ::std::os::raw::c_char,
    pub add_special: bool,
    pub parse_special: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_context_params {
    pub use_gpu: bool,
    pub print_timings: bool,
    pub n_threads: ::std::os::raw::c_int,
    pub image_marker: *const ::std::os::raw::c_char,
    pub media_marker: *const ::std::os::raw::c_char,
    pub flash_attn_type: llama_flash_attn_type,
    pub warmup: bool,
    pub image_min_tokens: ::std::os::raw::c_int,
    pub image_max_tokens: ::std::os::raw::c_int,
    pub cb_eval: ggml_backend_sched_eval_callback,
    pub cb_eval_user_data: *mut ::std::os::raw::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtmd_decoder_pos {
    pub t: u32,
    pub x: u32,
    pub y: u32,
    pub z: u32,
}
extern "C" {
    pub fn llama_backend_init_c();
}
extern "C" {
    pub fn llama_backend_free_c();
}
extern "C" {
    pub fn llama_log_set_verbosity_c(level: ::std::os::raw::c_int);
}
extern "C" {
    pub fn llama_log_get_verbosity_c() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_load_model_from_file_c(
        path_model: *const ::std::os::raw::c_char,
        n_gpu_layers: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn llama_free_model_c(model: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn llama_new_context_with_model_c(
        model: *mut ::std::os::raw::c_void,
        n_ctx: ::std::os::raw::c_int,
        n_threads: ::std::os::raw::c_int,
        n_batch: ::std::os::raw::c_int,
        flash_attn: bool,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn llama_free_c(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn llama_kv_cache_clear_c(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn llama_kv_cache_seq_rm_c(
        ctx: *mut ::std::os::raw::c_void,
        seq_id: ::std::os::raw::c_int,
        p_keep: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_tokenize_c(
        model: *const ::std::os::raw::c_void,
        text: *const ::std::os::raw::c_char,
        text_len: ::std::os::raw::c_int,
        tokens: *mut i32,
        n_tokens_max: ::std::os::raw::c_int,
        add_special: bool,
        parse_special: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_token_to_piece_c(
        model: *const ::std::os::raw::c_void,
        token: i32,
        buf: *mut ::std::os::raw::c_char,
        length: ::std::os::raw::c_int,
        lstrip: ::std::os::raw::c_int,
        special: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_token_bos_c(model: *const ::std::os::raw::c_void) -> i32;
}
extern "C" {
    pub fn llama_token_eos_c(model: *const ::std::os::raw::c_void) -> i32;
}
extern "C" {
    pub fn llama_token_nl_c(model: *const ::std::os::raw::c_void) -> i32;
}
extern "C" {
    pub fn llama_vocab_is_eog_c(model: *const ::std::os::raw::c_void, token: i32) -> bool;
}
extern "C" {
    pub fn llama_model_chat_template_c(
        model: *const ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn llama_n_vocab_c(model: *const ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_n_ctx_c(ctx: *const ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_model_is_recurrent_c(model: *const ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn llama_model_has_recurrent_state_c(model: *const ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn llama_decode_c(
        ctx: *mut ::std::os::raw::c_void,
        batch: *const llama_batch,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_get_logits_c(ctx: *mut ::std::os::raw::c_void) -> *mut f32;
}
extern "C" {
    pub fn llama_chat_apply_template_c(
        tmpl: *const ::std::os::raw::c_char,
        chat: *const llama_chat_message,
        n_msg: usize,
        add_ass: bool,
        buf: *mut ::std::os::raw::c_char,
        length: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_format_chat_with_model_c(
        model: *const ::std::os::raw::c_void,
        roles: *const *const ::std::os::raw::c_char,
        contents: *const *const ::std::os::raw::c_char,
        n_msg: usize,
        buf: *mut ::std::os::raw::c_char,
        buf_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_batch_init_c(
        n_tokens: ::std::os::raw::c_int,
        embd: ::std::os::raw::c_int,
        n_seq_max: ::std::os::raw::c_int,
    ) -> llama_batch;
}
extern "C" {
    pub fn llama_batch_free_c(batch: llama_batch);
}
extern "C" {
    pub fn llama_sampler_chain_create_c(
        model: *const ::std::os::raw::c_void,
        temperature: f32,
        top_p: f32,
        min_p: f32,
        top_k: ::std::os::raw::c_int,
        repeat_penalty: f32,
        penalty_last_n: ::std::os::raw::c_int,
        seed: u32,
        grammar: *const ::std::os::raw::c_char,
        grammar_root: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn llama_sampler_free_c(smpl: *mut ::std::os::raw::c_void);
}
